# Aquila-GS

./: .gitignore  .gitmodules  README.md  pyproject.toml
benchmark/: 705Rice.pheno.imputed.tsv  README.md  main.sh
benchmark/CLCNet/: tnl.txt
benchmark/CropARNet/: .gitignore  README.md  align_pheno_to_geno.py  config.json  extract_best_metrics.py  train_modify.py
benchmark/DNNGP/: README.md  cuda_cudnn_tensorflow_match.py  phenotype_preprocess.py  tsv2pkl_CLI.py
benchmark/aquila/: phenotypes_split.py
benchmark/bayescpi/: bayescpi_config.yaml  bayescpi_train.r
benchmark/pixant_impute/: phenotype_pixant_impute.R
breeding_application/: Inbred_120_heatmap.py  main.sh  plot_inbred_line_growth_subpop.py
case/: 1171rice.pheno  3485rice.pheno  README.md  main.sh  parse_best_fold.py
case/1171rice_phenotype_split/: Chalky_grain_percentage.tsv  Full_grain_number_per_panicle.tsv  Heading_date.tsv  Leaf_length.tsv  Plant_height.tsv  Seed_setting_rate.tsv  Tiller_angle.tsv  Valid_panicle_number.tsv  Yield_per_plant.tsv
case/interpretability/: 705rice_conv_mha.aquila-snp.top10.txt  compute_top10_mean.py  (+7 more)
evolve/: main.sh  plot_all_seed_round_predictions.py  plot_evolved_bar_with_gene.py  plot_qtn_gain_seed_mean_panel.py  plot_qtn_gain_seed_mean_panel_for_web.py  plot_screening_gain_QTN.py  plot_trait_change_summary.py  run_n_aquila_evolve.sh  teqing_to_hhz.evolve_direction_2.tsv  tq_hhz.1171rice.phenos.csv
graph_variants_distribution/: calc_density.py  indel_sv_density.tsv  karyotype.txt  main.sh  snp_density.tsv
model_ablation/: data_split.tsv
(+564 files in other folders)
